students/BudnikAnna/task_02/src/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web03
  namespace: app03
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web03
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web03
    spec:
      terminationGracePeriodSeconds: 20
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: web
          image: IMAGE_REPLACE_ME
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet:
              path: /ready
              port: 8083
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /live
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: "150m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
