students/BudnikAnna/task_02/src/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web03
  namespace: app03
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: web03.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web03
                port:
                  number: 80
